--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "simple-fullstack-app",
   "version": "1.0.0",
   "description": "A web app to motivate people to reach their goals",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js"
